# CS799--Assignment-2

./: .gitignore  CMakeLists.txt  README.md  bitstring.hpp  chc_performance.cpp  ga_performance.cpp  individual.hpp  main.cpp  main.hpp  parameter_search.cpp  util.hpp
Algorithms/: algorithm.hpp  chc.cpp  chc.hpp  simple_ga.cpp  simple_ga.hpp
Functions/: dejong.cpp  dejong.hpp  function.hpp
